--- a/modules/billing_individual/locale/fr_FR.po
+++ b/modules/billing_individual/locale/fr_FR.po
@@ -79,6 +79,10 @@ msgctxt "field:billing.billing_manager,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:billing.billing_manager,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:billing.billing_manager,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -183,6 +187,10 @@ msgctxt "field:billing.payment_method,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:billing.payment_method,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:billing.payment_method,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -238,6 +246,10 @@ msgstr "Société"
 msgctxt "field:billing.payment_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:billing.payment_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:billing.payment_rule,create_uid:"
 msgid "Create User"
@@ -295,6 +307,10 @@ msgctxt "field:billing.payment_rule-fee-relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:billing.payment_rule-fee-relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:billing.payment_rule-fee-relation,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -334,6 +350,10 @@ msgstr "Montant"
 msgctxt "field:billing.payment_rule_line,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:billing.payment_rule_line,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:billing.payment_rule_line,create_uid:"
 msgid "Create User"
@@ -427,6 +447,10 @@ msgctxt "field:billing.period,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:billing.period,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:billing.period,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -478,6 +502,10 @@ msgstr "Contrat"
 msgctxt "field:billing.price_line,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:billing.price_line,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:billing.price_line,create_uid:"
 msgid "Create User"
@@ -567,6 +595,10 @@ msgctxt "field:billing.price_line-fee-relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:billing.price_line-fee-relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:billing.price_line-fee-relation,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -611,6 +643,10 @@ msgctxt "field:billing.price_line-tax-relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:billing.price_line-tax-relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:billing.price_line-tax-relation,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -650,6 +686,10 @@ msgstr "Mis à jour par"
 msgctxt "field:billing.product-payment_method-relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:billing.product-payment_method-relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:billing.product-payment_method-relation,create_uid:"
 msgid "Create User"
