--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -42,6 +42,10 @@ msgctxt "field:commission.commission_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:commission.commission_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:commission.commission_rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -114,6 +118,10 @@ msgctxt "field:commission.compensated_option,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:commission.compensated_option,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:commission.compensated_option,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -174,6 +182,10 @@ msgctxt "field:commission.component-coverage,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:commission.component-coverage,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:commission.component-coverage,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -205,6 +217,10 @@ msgstr "Garantie commissionée"
 msgctxt "field:commission.price_line-com-relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:commission.price_line-com-relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:commission.price_line-com-relation,create_uid:"
 msgid "Create User"
@@ -274,6 +290,10 @@ msgctxt "field:distribution.dist_network-broker,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:distribution.dist_network-broker,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:distribution.dist_network-broker,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -309,6 +329,10 @@ msgstr "Plan de Commissionnement"
 msgctxt "field:distribution.dist_network-plan,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:distribution.dist_network-plan,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:distribution.dist_network-plan,create_uid:"
 msgid "Create User"
@@ -359,15 +383,19 @@ msgid "Is Loan"
 msgstr "Emprunteur"
 
 msgctxt "field:party.broker,create_date:"
-msgid ""
-msgstr " "
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:party.broker,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:party.broker,create_uid:"
-msgid ""
-msgstr " "
+msgid "Create User"
+msgstr "Create User"
 
 msgctxt "field:party.broker,id:"
-msgid ""
+msgid "ID"
 msgstr " "
 
 msgctxt "field:party.broker,must_expand_tree:"
@@ -375,24 +403,24 @@ msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
 msgctxt "field:party.broker,party:"
-msgid ""
-msgstr " "
+msgid "Party"
+msgstr "Acteur"
 
 msgctxt "field:party.broker,rec_name:"
-msgid ""
-msgstr " "
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:party.broker,reference:"
-msgid ""
-msgstr " "
+msgid "Reference"
+msgstr "Référence"
 
 msgctxt "field:party.broker,write_date:"
-msgid ""
-msgstr " "
+msgid "Write Date"
+msgstr "Date de mise à jour"
 
 msgctxt "field:party.broker,write_uid:"
-msgid ""
-msgstr " "
+msgid "Write User"
+msgstr "Mis à jour par"
 
 msgctxt "field:party.party,broker_role:"
 msgid "Broker"
@@ -471,8 +499,8 @@ msgid "Commission Plans"
 msgstr "Plans de Commissionnement"
 
 msgctxt "model:party.broker,name:"
-msgid ""
-msgstr " "
+msgid "Broker"
+msgstr "Courtier"
 
 msgctxt "selection:commission.commission_rule,config_kind:"
 msgid "Advanced"
