--- a/modules/coop_party/locale/fr_FR.po
+++ b/modules/coop_party/locale/fr_FR.po
@@ -66,6 +66,10 @@ msgctxt "field:party.actor,reference:"
 msgid "Reference"
 msgstr "Référence"
 
+msgctxt "field:party.address,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:party.address,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
@@ -85,6 +89,10 @@ msgstr "Code Postal"
 msgctxt "field:party.address_kind,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:party.address_kind,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:party.address_kind,create_uid:"
 msgid "Create User"
@@ -150,6 +158,10 @@ msgctxt "field:party.contact_history,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:party.contact_history,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:party.contact_history,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -202,6 +214,10 @@ msgctxt "field:party.contact_history,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
+msgctxt "field:party.contact_mechanism,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:party.party,birth_date:"
 msgid "Birth Date"
 msgstr "Date de Naissance"
@@ -209,6 +225,10 @@ msgstr "Date de Naissance"
 msgctxt "field:party.party,children:"
 msgid "Children"
 msgstr "Enfants"
+
+msgctxt "field:party.party,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:party.party,first_name:"
 msgid "First Name"
@@ -265,6 +285,10 @@ msgstr "Synthèse"
 msgctxt "field:party.party-relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:party.party-relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:party.party-relation,create_uid:"
 msgid "Create User"
@@ -325,6 +349,10 @@ msgstr "Code"
 msgctxt "field:party.party_relation_kind,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:party.party_relation_kind,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:party.party_relation_kind,create_uid:"
 msgid "Create User"
