--- a/modules/insurance_claim/locale/fr_FR.po
+++ b/modules/insurance_claim/locale/fr_FR.po
@@ -6,10 +6,6 @@ msgctxt "error:ins_claim.loss:"
 msgid "End Date is smaller than start date"
 msgstr "La date de fin est antérieure à la date de début"
 
-msgctxt "field:ins_claim.claim,claim_history:"
-msgid "History"
-msgstr "Historique"
-
 msgctxt "field:ins_claim.claim,claimant:"
 msgid "Claimant"
 msgstr "Déclarant"
@@ -21,6 +17,10 @@ msgstr "Société"
 msgctxt "field:ins_claim.claim,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_claim.claim,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_claim.claim,create_uid:"
 msgid "Create User"
@@ -94,6 +94,10 @@ msgctxt "field:ins_claim.claim.history,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_claim.claim.history,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_claim.claim.history,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -161,6 +165,10 @@ msgstr "Bénéficiaire"
 msgctxt "field:ins_claim.indemnification,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_claim.indemnification,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_claim.indemnification,create_uid:"
 msgid "Create User"
@@ -253,6 +261,10 @@ msgstr "Montant par Unité"
 msgctxt "field:ins_claim.indemnification_detail,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_claim.indemnification_detail,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_claim.indemnification_detail,create_uid:"
 msgid "Create User"
@@ -409,6 +421,10 @@ msgstr "Données Complémentaires"
 msgctxt "field:ins_claim.loss,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_claim.loss,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_claim.loss,create_uid:"
 msgid "Create User"
@@ -853,10 +869,6 @@ msgstr "Sinistre"
 msgctxt "view:ins_claim.claim:"
 msgid "Documents"
 msgstr "Documents"
-
-msgctxt "view:ins_claim.claim:"
-msgid "History"
-msgstr "Historique"
 
 msgctxt "view:ins_claim.claim:"
 msgid "Losses"
