--- a/modules/insurance_contract/locale/fr_FR.po
+++ b/modules/insurance_contract/locale/fr_FR.po
@@ -170,6 +170,10 @@ msgctxt "field:contract.contract.history,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:contract.contract.history,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:contract.contract.history,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -346,6 +350,10 @@ msgctxt "field:ins_contract.covered_data,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_contract.covered_data,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_contract.covered_data,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -438,6 +446,10 @@ msgctxt "field:ins_contract.covered_element,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_contract.covered_element,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_contract.covered_element,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -510,6 +522,10 @@ msgctxt "field:ins_contract.covered_element-party_relation,create_date:"
 msgid ""
 msgstr " "
 
+msgctxt "field:ins_contract.covered_element-party_relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_contract.covered_element-party_relation,create_uid:"
 msgid ""
 msgstr " "
@@ -541,6 +557,10 @@ msgstr "Contrat"
 msgctxt "field:ins_contract.delivered_service,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_contract.delivered_service,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_contract.delivered_service,create_uid:"
 msgid "Create User"
@@ -590,6 +610,10 @@ msgctxt "field:ins_contract.expense,create_date:"
 msgid ""
 msgstr " "
 
+msgctxt "field:ins_contract.expense,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_contract.expense,create_uid:"
 msgid ""
 msgstr " "
@@ -637,6 +661,10 @@ msgstr "Contrat"
 msgctxt "field:ins_contract.management_role,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_contract.management_role,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_contract.management_role,create_uid:"
 msgid "Create User"
@@ -726,6 +754,10 @@ msgctxt "field:ins_contract.subscribed_coverage_complement,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_contract.subscribed_coverage_complement,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_contract.subscribed_coverage_complement,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -769,9 +801,61 @@ msgctxt "field:ins_product.request_finder,tmp_0:"
 msgid "Contract"
 msgstr "Contrat"
 
+msgctxt "field:party.customer,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:party.customer,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
+msgctxt "field:party.customer,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:party.customer,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:party.customer,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:party.customer,party:"
+msgid "Party"
+msgstr "Acteur"
+
+msgctxt "field:party.customer,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:party.customer,reference:"
+msgid "Reference"
+msgstr "Référence"
+
+msgctxt "field:party.customer,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:party.customer,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:party.party,complementary_data:"
+msgid "Complementary Data"
+msgstr "Données Complémentaires"
+
 msgctxt "field:party.party,covered_elements:"
 msgid "Covered Elements"
 msgstr "Eléments Couverts"
+
+msgctxt "field:party.party,customer_role:"
+msgid "Customer"
+msgstr "Client"
+
+msgctxt "field:party.party,is_customer:"
+msgid "Customer"
+msgstr "Client"
 
 msgctxt "model:contract.address,name:"
 msgid "Contract Address"
@@ -852,6 +936,10 @@ msgstr "Individuel"
 msgctxt "model:ir.ui.menu,name:menu_renew_contract"
 msgid "Renew Contracts"
 msgstr "Renouvellement"
+
+msgctxt "model:party.customer,name:"
+msgid "Customer"
+msgstr "Client"
 
 msgctxt "selection:contract.contract,status:"
 msgid "Active"
