--- a/modules/insurance_product/locale/fr_FR.po
+++ b/modules/insurance_product/locale/fr_FR.po
@@ -151,6 +151,10 @@ msgctxt "field:ins_product.benefit,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.benefit,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.benefit,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -256,6 +260,10 @@ msgctxt "field:ins_product.benefit-complementary_data_def,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.benefit-complementary_data_def,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.benefit-complementary_data_def,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -283,6 +291,10 @@ msgstr "Prestation"
 msgctxt "field:ins_product.benefit-loss_desc,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.benefit-loss_desc,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.benefit-loss_desc,create_uid:"
 msgid "Create User"
@@ -331,6 +343,10 @@ msgstr "Type de Conf."
 msgctxt "field:ins_product.benefit_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.benefit_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.benefit_rule,create_uid:"
 msgid "Create User"
@@ -489,6 +505,10 @@ msgctxt "field:ins_product.clause,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.clause,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.clause,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -541,6 +561,10 @@ msgctxt "field:ins_product.clause_relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.clause_relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.clause_relation,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -572,6 +596,10 @@ msgstr "Type de Conf."
 msgctxt "field:ins_product.clause_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.clause_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.clause_rule,create_uid:"
 msgid "Create User"
@@ -645,6 +673,10 @@ msgctxt "field:ins_product.clause_version,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.clause_version,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.clause_version,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -704,6 +736,10 @@ msgstr "Type de Conf."
 msgctxt "field:ins_product.coverage_amount_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.coverage_amount_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.coverage_amount_rule,create_uid:"
 msgid "Create User"
@@ -769,6 +805,10 @@ msgctxt "field:ins_product.deductible_duration,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.deductible_duration,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.deductible_duration,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -816,6 +856,10 @@ msgstr "Type de Conf."
 msgctxt "field:ins_product.deductible_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.deductible_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.deductible_rule,create_uid:"
 msgid "Create User"
@@ -905,6 +949,10 @@ msgctxt "field:ins_product.document,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.document,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.document,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -961,6 +1009,10 @@ msgctxt "field:ins_product.document-rule-relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.document-rule-relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.document-rule-relation,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -996,6 +1048,10 @@ msgstr "Code"
 msgctxt "field:ins_product.document_desc,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.document_desc,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.document_desc,create_uid:"
 msgid "Create User"
@@ -1036,6 +1092,10 @@ msgstr "Mis à jour par"
 msgctxt "field:ins_product.document_request,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.document_request,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.document_request,create_uid:"
 msgid "Create User"
@@ -1105,6 +1165,10 @@ msgctxt "field:ins_product.document_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.document_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.document_rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1173,6 +1237,10 @@ msgctxt "field:ins_product.eligibility_relation_kind,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.eligibility_relation_kind,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.eligibility_relation_kind,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1208,6 +1276,10 @@ msgstr "Type de Conf."
 msgctxt "field:ins_product.eligibility_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.eligibility_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.eligibility_rule,create_uid:"
 msgid "Create User"
@@ -1301,6 +1373,10 @@ msgctxt "field:ins_product.event_desc,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.event_desc,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.event_desc,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1337,6 +1413,10 @@ msgctxt "field:ins_product.event_desc-loss_desc,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.event_desc-loss_desc,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.event_desc-loss_desc,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1372,6 +1452,10 @@ msgstr "Code"
 msgctxt "field:ins_product.expense_kind,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.expense_kind,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.expense_kind,create_uid:"
 msgid "Create User"
@@ -1421,6 +1505,10 @@ msgctxt "field:ins_product.item_desc,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.item_desc,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.item_desc,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1466,6 +1554,10 @@ msgctxt "field:ins_product.item_desc-complementary_data_def,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.item_desc-complementary_data_def,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.item_desc-complementary_data_def,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1493,6 +1585,10 @@ msgstr "Mis à jour par"
 msgctxt "field:ins_product.item_desc-sub_item_desc,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.item_desc-sub_item_desc,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.item_desc-sub_item_desc,create_uid:"
 msgid "Create User"
@@ -1529,6 +1625,10 @@ msgstr "Code"
 msgctxt "field:ins_product.letter_model,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.letter_model,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.letter_model,create_uid:"
 msgid "Create User"
@@ -1694,6 +1794,10 @@ msgctxt "field:ins_product.loss-document-relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.loss-document-relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.loss-document-relation,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1737,6 +1841,10 @@ msgstr "Données Complémentaires"
 msgctxt "field:ins_product.loss_desc,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.loss_desc,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.loss_desc,create_uid:"
 msgid "Create User"
@@ -1791,6 +1899,10 @@ msgctxt "field:ins_product.loss_desc-complementary_data_def,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.loss_desc-complementary_data_def,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.loss_desc-complementary_data_def,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1826,6 +1938,10 @@ msgstr "Type de Conf."
 msgctxt "field:ins_product.pricing_component,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.pricing_component,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.pricing_component,create_uid:"
 msgid "Create User"
@@ -1907,6 +2023,10 @@ msgctxt "field:ins_product.pricing_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.pricing_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.pricing_rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -1983,6 +2103,10 @@ msgctxt "field:ins_product.process_product_relation,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.process_product_relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.process_product_relation,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -2046,6 +2170,10 @@ msgstr "Type de Conf."
 msgctxt "field:ins_product.reserve_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.reserve_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.reserve_rule,create_uid:"
 msgid "Create User"
@@ -2211,6 +2339,10 @@ msgctxt "field:ins_product.sub_benefit_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_product.sub_benefit_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_product.sub_benefit_rule,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -2270,6 +2402,10 @@ msgstr "Type de Conf."
 msgctxt "field:ins_product.term_renewal_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:ins_product.term_renewal_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:ins_product.term_renewal_rule,create_uid:"
 msgid "Create User"
@@ -2607,6 +2743,10 @@ msgctxt "field:offered.coverage-benefit,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:offered.coverage-benefit,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:offered.coverage-benefit,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -2908,6 +3048,10 @@ msgctxt "field:offered.product-item_desc,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:offered.product-item_desc,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:offered.product-item_desc,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -2967,6 +3111,54 @@ msgstr "Date de mise à jour"
 msgctxt "field:offered.product-options-coverage,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
+
+msgctxt "field:party.insurer,create_date:"
+msgid "Create Date"
+msgstr "Date de création"
+
+msgctxt "field:party.insurer,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
+msgctxt "field:party.insurer,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:party.insurer,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:party.insurer,must_expand_tree:"
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:party.insurer,party:"
+msgid "Party"
+msgstr "Acteur"
+
+msgctxt "field:party.insurer,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:party.insurer,reference:"
+msgid "Reference"
+msgstr "Référence"
+
+msgctxt "field:party.insurer,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:party.insurer,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:party.party,insurer_role:"
+msgid "Insurer"
+msgstr "Assureur"
+
+msgctxt "field:party.party,is_insurer:"
+msgid "Insurer"
+msgstr "Assureur"
 
 msgctxt "field:process.process_desc,for_products:"
 msgid "Products"
@@ -3344,6 +3536,10 @@ msgstr "Relation Produit-Risque"
 msgctxt "model:offered.product-options-coverage,name:"
 msgid "Define Product - Coverage relations"
 msgstr "Relations Produit Garantie"
+
+msgctxt "model:party.insurer,name:"
+msgid "Insurer"
+msgstr "Assureur"
 
 msgctxt "selection:ins_product.benefit,indemnification_kind:"
 msgid "Annuity"
