--- a/modules/life_billing_collective_fr/locale/fr_FR.po
+++ b/modules/life_billing_collective_fr/locale/fr_FR.po
@@ -39,6 +39,10 @@ msgctxt "field:billing.rate_line,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:billing.rate_line,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:billing.rate_line,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -135,6 +139,10 @@ msgctxt "field:billing.rate_note,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:billing.rate_note,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:billing.rate_note,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -214,6 +222,10 @@ msgstr "Contrat"
 msgctxt "field:billing.rate_note_line,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:billing.rate_note_line,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:billing.rate_note_line,create_uid:"
 msgid "Create User"
@@ -417,6 +429,10 @@ msgctxt "field:collective.fare_class,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:collective.fare_class,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:collective.fare_class,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -452,6 +468,10 @@ msgstr "Code"
 msgctxt "field:collective.fare_class_group,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:collective.fare_class_group,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:collective.fare_class_group,create_uid:"
 msgid "Create User"
@@ -489,6 +509,10 @@ msgctxt "field:collective.fare_class_group-fare_class,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:collective.fare_class_group-fare_class,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:collective.fare_class_group-fare_class,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -524,6 +548,10 @@ msgstr "Type de Conf."
 msgctxt "field:collective.rating_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:collective.rating_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:collective.rating_rule,create_uid:"
 msgid "Create User"
@@ -600,6 +628,10 @@ msgstr "Type de Conf."
 msgctxt "field:collective.sub_rating_rule,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:collective.sub_rating_rule,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:collective.sub_rating_rule,create_uid:"
 msgid "Create User"
@@ -696,6 +728,10 @@ msgstr "Code"
 msgctxt "field:party.group,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:party.group,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:party.group,create_uid:"
 msgid "Create User"
