--- a/modules/offered/locale/fr_FR.po
+++ b/modules/offered/locale/fr_FR.po
@@ -34,6 +34,10 @@ msgctxt "field:offered.compl_data_def-tag,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:offered.compl_data_def-tag,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:offered.compl_data_def-tag,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -61,6 +65,10 @@ msgstr "Mis à jour par"
 msgctxt "field:offered.complementary_data_def,create_date:"
 msgid ""
 msgstr " "
+
+msgctxt "field:offered.complementary_data_def,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:offered.complementary_data_def,create_uid:"
 msgid ""
@@ -166,6 +174,10 @@ msgctxt "field:offered.complementary_data_recursive_relation,create_date:"
 msgid ""
 msgstr " "
 
+msgctxt "field:offered.complementary_data_recursive_relation,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:offered.complementary_data_recursive_relation,create_uid:"
 msgid ""
 msgstr " "
@@ -222,6 +234,10 @@ msgstr " "
 msgctxt "field:offered.coverage,create_date:"
 msgid ""
 msgstr " "
+
+msgctxt "field:offered.coverage,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:offered.coverage,create_uid:"
 msgid ""
@@ -312,6 +328,10 @@ msgctxt "field:offered.coverage-complementary_data_def,create_date:"
 msgid ""
 msgstr " "
 
+msgctxt "field:offered.coverage-complementary_data_def,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:offered.coverage-complementary_data_def,create_uid:"
 msgid ""
 msgstr " "
@@ -392,6 +412,10 @@ msgctxt "field:offered.package-coverage,create_date:"
 msgid ""
 msgstr " "
 
+msgctxt "field:offered.package-coverage,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:offered.package-coverage,create_uid:"
 msgid ""
 msgstr " "
@@ -443,6 +467,10 @@ msgstr "Garanties"
 msgctxt "field:offered.product,create_date:"
 msgid ""
 msgstr " "
+
+msgctxt "field:offered.product,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:offered.product,create_uid:"
 msgid ""
@@ -520,6 +548,10 @@ msgctxt "field:offered.product-complementary_data_def,create_date:"
 msgid ""
 msgstr " "
 
+msgctxt "field:offered.product-complementary_data_def,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:offered.product-complementary_data_def,create_uid:"
 msgid ""
 msgstr " "
@@ -551,6 +583,10 @@ msgstr " "
 msgctxt "field:offered.product-options-coverage,create_date:"
 msgid ""
 msgstr " "
+
+msgctxt "field:offered.product-options-coverage,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:offered.product-options-coverage,create_uid:"
 msgid ""
@@ -711,6 +747,14 @@ msgstr "Alphanumérique"
 msgctxt "selection:offered.complementary_data_def,type_:"
 msgid "Date"
 msgstr "Date"
+
+msgctxt "selection:offered.complementary_data_def,type_:"
+msgid "DateTime"
+msgstr ""
+
+msgctxt "selection:offered.complementary_data_def,type_:"
+msgid "Float"
+msgstr ""
 
 msgctxt "selection:offered.complementary_data_def,type_:"
 msgid "Integer"
