--- a/modules/rule_engine/locale/fr_FR.po
+++ b/modules/rule_engine/locale/fr_FR.po
@@ -69,6 +69,10 @@ msgctxt "field:rule_engine,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:rule_engine,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:rule_engine,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -157,6 +161,10 @@ msgctxt "field:rule_engine.context,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:rule_engine.context,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:rule_engine.context,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -192,6 +200,10 @@ msgstr "Contexte"
 msgctxt "field:rule_engine.context-rule_engine.tree_element,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:rule_engine.context-rule_engine.tree_element,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:rule_engine.context-rule_engine.tree_element,create_uid:"
 msgid "Create User"
@@ -229,6 +241,10 @@ msgctxt "field:rule_engine.error,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:rule_engine.error,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:rule_engine.error,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -264,6 +280,10 @@ msgstr "Mis à jour par"
 msgctxt "field:rule_engine.execution_log,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:rule_engine.execution_log,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:rule_engine.execution_log,create_uid:"
 msgid "Create User"
@@ -329,6 +349,10 @@ msgctxt "field:rule_engine.parameter,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:rule_engine.parameter,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:rule_engine.parameter,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -376,6 +400,10 @@ msgstr "Mis à jour par"
 msgctxt "field:rule_engine.rule_engine-tag,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:rule_engine.rule_engine-tag,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:rule_engine.rule_engine-tag,create_uid:"
 msgid "Create User"
@@ -429,6 +457,10 @@ msgctxt "field:rule_engine.tag,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:rule_engine.tag,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:rule_engine.tag,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -468,6 +500,10 @@ msgstr "Mis à jour par"
 msgctxt "field:rule_engine.test_case,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:rule_engine.test_case,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:rule_engine.test_case,create_uid:"
 msgid "Create User"
@@ -541,6 +577,10 @@ msgctxt "field:rule_engine.test_case.value,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:rule_engine.test_case.value,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:rule_engine.test_case.value,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -600,6 +640,10 @@ msgstr "Enfants"
 msgctxt "field:rule_engine.tree_element,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
+
+msgctxt "field:rule_engine.tree_element,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
 
 msgctxt "field:rule_engine.tree_element,create_uid:"
 msgid "Create User"
