--- a/modules/distribution/locale/fr_FR.po
+++ b/modules/distribution/locale/fr_FR.po
@@ -10,6 +10,10 @@ msgctxt "field:distribution.dist_network,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:distribution.dist_network,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:distribution.dist_network,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
