--- a/modules/health/locale/fr_FR.po
+++ b/modules/health/locale/fr_FR.po
@@ -14,6 +14,10 @@ msgctxt "field:health.party_complement,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:health.party_complement,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:health.party_complement,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
