--- a/modules/insurance_contract_subscription/locale/fr_FR.po
+++ b/modules/insurance_contract_subscription/locale/fr_FR.po
@@ -134,6 +134,10 @@ msgctxt "field:ins_contract.subscription_mgr,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
 
+msgctxt "field:ins_contract.subscription_mgr,create_date_:"
+msgid "Creation date"
+msgstr "Creation date"
+
 msgctxt "field:ins_contract.subscription_mgr,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
